fixed environment name + added shell helper scripts

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ serverstart.sh
 redesign/serverstart.sh
 redesign/startserver.sh
 redesign/serverstartwin.cmd
+redesign/.vs/slnx.sqlite
+redesign/copysparkpybuild.cmd
