ignore ide files

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ redesign/startserver.sh
 redesign/serverstartwin.cmd
 redesign/.vs/slnx.sqlite
 redesign/copysparkpybuild.cmd
+redesign/.vs/redesign/v16/.suo
+redesign/.vs/VSWorkspaceState.json
